--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "3d-form",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "store": "~2.3.0",
+    "extend": "~0.1.1"
+  },
   "devDependencies": {}
 }
