Update and simplify build process and gulp tasks.

--- a/package.json
+++ b/package.json
@@ -3,31 +3,25 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "connect": "^2.25.10",
-    "connect-livereload": "^0.4.0",
+    "connect": "^3.4.1",
+    "connect-livereload": "^0.5.4",
+    "del": "^2.2.1",
     "gulp": "^3.6.0",
-    "gulp-autoprefixer": "0.0.7",
-    "gulp-bower-files": "^0.2.1",
-    "gulp-cache": "^0.1.1",
-    "gulp-clean": "^0.2.4",
-    "gulp-csso": "^0.2.6",
-    "gulp-filter": "^0.4.1",
-    "gulp-flatten": "^0.0.2",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-jade": "^0.7.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-livereload": "^1.5.0",
-    "gulp-load-plugins": "^0.5.0",
-    "gulp-ruby-sass": "^0.4.3",
-    "gulp-sass": "^0.7.3",
-    "gulp-size": "^0.3.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-cache": "^0.4.5",
+    "gulp-csso": "^2.0.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-imagemin": "^3.0.2",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-pug": "^3.0.3",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.5.1",
-    "gulp-stylus": "^2.0.1",
-    "gulp-uglify": "^0.2.1",
-    "gulp-useref": "^0.4.2",
-    "jshint-stylish": "^0.2.0",
-    "opn": "^0.1.1",
-    "wiredep": "^1.8.5"
+    "gulp-stylus": "^2.5.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.0",
+    "opn": "^4.0.2",
+    "wiredep": "^4.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
