--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "3d-form",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "store": "^1.3.20"
+  },
   "devDependencies": {
-    "connect": "^3.4.1",
-    "connect-livereload": "^0.5.4",
+    "browser-sync": "^2.14.0",
     "del": "^2.2.1",
     "gulp": "^3.6.0",
     "gulp-autoprefixer": "^3.1.0",
